# iocforge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  config.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  demo.tape  خطوات_التشغيل_والرفع.md  شرح_الكود_بالعربية.md  شرح_عرض_الـGIF.md
docs/img/: .gitkeep
examples/: sample_iocs.json  sample_report.txt
examples/output/: example_report.csv  example_report.html  example_report.json  example_report.txt
src/iocforge/: __init__.py
src/iocforge/cli/: __init__.py  main.py
src/iocforge/config/: __init__.py  settings.py
src/iocforge/core/: __init__.py  engine.py  models.py
src/iocforge/enrichment/: __init__.py  abuseipdb.py  base.py  manager.py  otx.py  threatfox.py  virustotal.py
src/iocforge/extractors/: __init__.py  base.py  false_positives.py  hashes.py  misc.py  network.py  patterns.py  registry.py
src/iocforge/parsers/: __init__.py  base.py  document_parsers.py  factory.py  text_parsers.py
src/iocforge/reporting/: __init__.py  base.py  csv_reporter.py  html_reporter.py  json_reporter.py  manager.py  summary_reporter.py
src/iocforge/utils/: __init__.py  banner.py  colors.py  logger.py
tests/: conftest.py  test_engine.py  test_enrichment.py  test_extractors.py  test_parsers.py  test_reporting.py
