[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iocforge"
version = "1.0.0"
description = "Extract. Analyze. Enrich. Understand. — An advanced Threat Intelligence IOC utility."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Adham", email = "adhamayman41212@gmail.com" }]
keywords = ["threat-intelligence", "cti", "dfir", "ioc", "security", "virustotal", "otx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
parsers = ["beautifulsoup4>=4.12.0", "pypdf>=4.0.0", "python-docx>=1.1.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "black>=24.0.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[project.scripts]
iocforge = "iocforge.cli.main:main"

[project.urls]
Homepage = "https://github.com/Adham504/iocforge"
Repository = "https://github.com/Adham504?tab=repositories"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
# E501: long lines handled by black. B008: Typer relies on calls in defaults
# (typer.Argument/Option). UP* rules are excluded so we stay py3.9-compatible
# (typing.List / Optional are intentional with `from __future__ import annotations`).
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false
